--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "prod": "cd huebflix && ng build --prod && cd ../ && node server.js"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.9.1",
     "express": "^4.18.1"
   }
 }
